Add integration and unit tests for JdbcCliTypedApi and related services
- Implement JdbcCliTypedApiIntegrationTest for end-to-end testing of JdbcCliTypedApi with Testcontainers, covering various SQL query scenarios and database types.
- Create JdbcCliTypedApiTest to unit test JdbcCliTypedApi, ensuring proper delegation to TypedQueryExecutorService and handling of null parameters.
- Introduce DatabaseExecutionContextTest to validate password resolution and connection lifecycle using an H2 in-memory database.
- Add TypedQueryExecutorServiceTest to test SQL request dispatching and error handling without Testcontainers, ensuring correct execution of SQL queries and parameter binding.
- Implement necessary test beans and utility methods for testing purposes.