@@ -28,15 +28,17 @@ import com.company.app.service.testcontainers.ContainerFactory;
 import com.company.app.service.testcontainers.DatabaseType;
 
 /**
- * Integration tests for JdbcCliLibrary typed query API using Testcontainers. Supports parameterized
- * database testing via -Ddatabase system property (postgres, mysql, sqlserver, oracle). Default:
- * postgres. Tests end-to-end functionality: connection management, vault integration, typed
- * queries. Testcontainers manages database lifecycle - container is closed after tests. Static test
- * class pattern is acceptable for integration tests with @BeforeAll/@AfterAll.
+ * Integration tests for {@link JdbcCliTypedApi} using Testcontainers.
+ *
+ * <p>Supports parameterized database testing via {@code -Ddatabase} system property (postgres,
+ * mysql, sqlserver, oracle). Default: postgres.
+ *
+ * <p>Tests end-to-end functionality via {@code library.typed()}: typed query execution, column
+ * mapping, parameter binding, error propagation.
  */
 @SuppressWarnings({"resource", "java:S1118", "PMD.UseUtilityClass"})
 @Testcontainers
-class JdbcCliLibraryIntegrationTest {
+class JdbcCliTypedApiIntegrationTest {
 
   private static final DatabaseType DATABASE_TYPE = DatabaseType.fromSystemProperty();
 
@@ -52,21 +54,17 @@ class JdbcCliLibraryIntegrationTest {
 
   @BeforeAll
   static void setupLibrary() throws Exception {
-    // Get connection details from container
     jdbcUrl = ContainerFactory.getJdbcUrl(container, DATABASE_TYPE);
     username = ContainerFactory.getUsername(container, DATABASE_TYPE);
     password = ContainerFactory.getPassword(container, DATABASE_TYPE);
 
-    // Initialize library using factory method with resolved password
     library = JdbcCliLibrary.withPassword(password);
 
-    // Create direct connection for test data setup
     directConnection = DriverManager.getConnection(jdbcUrl, username, password);
 
-    // Load and execute schema file
     String schemaResource = DATABASE_TYPE.getSchemaResource();
     try (InputStream is =
-        JdbcCliLibraryIntegrationTest.class.getClassLoader().getResourceAsStream(schemaResource)) {
+        JdbcCliTypedApiIntegrationTest.class.getClassLoader().getResourceAsStream(schemaResource)) {
       if (is == null) {
         throw new IllegalStateException("Schema resource not found: " + schemaResource);
       }
@@ -82,19 +80,9 @@ class JdbcCliLibraryIntegrationTest {
     }
   }
 
-  /**
-   * Execute SQL statements from a script, splitting on semicolons and forward slashes (Oracle
-   * PL/SQL). Supports multi-statement scripts and handles special database-specific syntax (e.g.,
-   * Oracle triggers with /). Uses ScriptParser for proper statement splitting.
-   *
-   * @param connection the database connection
-   * @param sql the SQL script to execute
-   * @throws SQLException if a statement fails to execute
-   */
-  private static void executeStatements(Connection connection, String sql) throws SQLException {
-    // Use ScriptParser to properly handle both regular SQL and PL/SQL blocks
+  private static void executeStatements(final Connection connection, final String sql)
+      throws SQLException {
     ScriptParser.ParsedScript parsed = ScriptParser.parseContent(sql, "inline-schema");
-
     try (Statement stmt = connection.createStatement()) {
       for (String statement : parsed.statements()) {
         stmt.execute(statement);
@@ -102,25 +90,11 @@ class JdbcCliLibraryIntegrationTest {
     }
   }
 
-  /**
-   * Get the database name as expected by JdbcCliLibrary (e.g., getDatabaseName(), "mysql",
-   * "sqlserver", "oracle").
-   *
-   * @return the database name string
-   */
   private static String getDatabaseName() {
     return DATABASE_TYPE.name().toLowerCase();
   }
 
-  /**
-   * Convert a boolean value to the appropriate type/value for the target database. Different
-   * databases represent booleans differently: - PostgreSQL: true/false - MySQL: 1/0 - SQL Server:
-   * 1/0 - Oracle: 'Y'/'N'
-   *
-   * @param bool the boolean value
-   * @return the converted value
-   */
-  private static Object convertBoolean(boolean bool) {
+  private static Object convertBoolean(final boolean bool) {
     return switch (DATABASE_TYPE) {
       case POSTGRES -> bool;
       case MYSQL, SQLSERVER -> bool ? 1 : 0;
@@ -128,7 +102,10 @@ class JdbcCliLibraryIntegrationTest {
     };
   }
 
-  // Test beans matching database schema
+  // =========================================================================
+  // Test beans
+  // =========================================================================
+
   public static class Employee {
     private Integer id;
     private String firstName;
@@ -139,12 +116,11 @@ class JdbcCliLibraryIntegrationTest {
     private Date hireDate;
     private Boolean isActive;
 
-    // Getters and setters
     public Integer getId() {
       return id;
     }
 
-    public void setId(Integer id) {
+    public void setId(final Integer id) {
       this.id = id;
     }
 
@@ -152,7 +128,7 @@ class JdbcCliLibraryIntegrationTest {
       return firstName;
     }
 
-    public void setFirstName(String firstName) {
+    public void setFirstName(final String firstName) {
       this.firstName = firstName;
     }
 
@@ -160,7 +136,7 @@ class JdbcCliLibraryIntegrationTest {
       return lastName;
     }
 
-    public void setLastName(String lastName) {
+    public void setLastName(final String lastName) {
       this.lastName = lastName;
     }
 
@@ -168,7 +144,7 @@ class JdbcCliLibraryIntegrationTest {
       return email;
     }
 
-    public void setEmail(String email) {
+    public void setEmail(final String email) {
       this.email = email;
     }
 
@@ -176,7 +152,7 @@ class JdbcCliLibraryIntegrationTest {
       return department;
     }
 
-    public void setDepartment(String department) {
+    public void setDepartment(final String department) {
       this.department = department;
     }
 
@@ -184,7 +160,7 @@ class JdbcCliLibraryIntegrationTest {
       return salary;
     }
 
-    public void setSalary(BigDecimal salary) {
+    public void setSalary(final BigDecimal salary) {
       this.salary = salary;
     }
 
@@ -192,7 +168,7 @@ class JdbcCliLibraryIntegrationTest {
       return hireDate;
     }
 
-    public void setHireDate(Date hireDate) {
+    public void setHireDate(final Date hireDate) {
       this.hireDate = hireDate;
     }
 
@@ -200,14 +176,8 @@ class JdbcCliLibraryIntegrationTest {
       return isActive;
     }
 
-    public void setIsActive(Boolean isActive) {
+    public void setIsActive(final Boolean isActive) {
       this.isActive = isActive;
-    }
-
-    @Override
-    public String toString() {
-      return "Employee{id=%d, name='%s %s', email='%s', dept='%s', salary=%s}"
-          .formatted(id, firstName, lastName, email, department, salary);
     }
   }
 
@@ -220,7 +190,7 @@ class JdbcCliLibraryIntegrationTest {
       return deptId;
     }
 
-    public void setDeptId(Integer deptId) {
+    public void setDeptId(final Integer deptId) {
       this.deptId = deptId;
     }
 
@@ -228,7 +198,7 @@ class JdbcCliLibraryIntegrationTest {
       return deptName;
     }
 
-    public void setDeptName(String deptName) {
+    public void setDeptName(final String deptName) {
       this.deptName = deptName;
     }
 
@@ -236,34 +206,30 @@ class JdbcCliLibraryIntegrationTest {
       return location;
     }
 
-    public void setLocation(String location) {
+    public void setLocation(final String location) {
       this.location = location;
     }
   }
 
+  // =========================================================================
+  // runSqlTypedApi() — list overload
+  // =========================================================================
+
   @Nested
-  @DisplayName("queryForList()")
-  class QueryForListTests {
+  @DisplayName("runSqlTypedApi() — list")
+  class RunSqlTypedApiListTests {
 
     @Test
     @DisplayName("should query all employees")
     void shouldQueryAllEmployees() {
-      // Given
       String sql = "SELECT * FROM employees ORDER BY id";
 
-      // When
       List<Employee> employees =
-          library.queryForList(
-              getDatabaseName(),
-              jdbcUrl,
-              username,
-              sql,
-              List.of(),
-              Employee.class,
-              null // No vault config for test
-              );
+          library
+              .typed()
+              .runSqlTypedApi(
+                  getDatabaseName(), jdbcUrl, username, sql, List.of(), Employee.class, null);
 
-      // Then
       assertThat(employees)
           .hasSize(5)
           .extracting(Employee::getFirstName)
@@ -273,23 +239,22 @@ class JdbcCliLibraryIntegrationTest {
     @Test
     @DisplayName("should query with WHERE clause and parameters")
     void shouldQueryWithParameters() {
-      // Given
       String sql = "SELECT * FROM employees WHERE department = ? AND is_active = ?";
 
-      // When
       List<Employee> engineers =
-          library.queryForList(
-              getDatabaseName(),
-              jdbcUrl,
-              username,
-              sql,
-              List.of("Engineering", convertBoolean(true)),
-              Employee.class,
-              null);
+          library
+              .typed()
+              .runSqlTypedApi(
+                  getDatabaseName(),
+                  jdbcUrl,
+                  username,
+                  sql,
+                  List.of("Engineering", convertBoolean(true)),
+                  Employee.class,
+                  null);
 
-      // Then
       assertThat(engineers)
-          .hasSize(3) // Alice, Charlie, Eve
+          .hasSize(3)
           .extracting(Employee::getFirstName)
           .containsExactlyInAnyOrder("Alice", "Charlie", "Eve");
     }
@@ -297,61 +262,58 @@ class JdbcCliLibraryIntegrationTest {
     @Test
     @DisplayName("should handle salary range query")
     void shouldQuerySalaryRange() {
-      // Given
       String sql = "SELECT * FROM employees WHERE salary BETWEEN ? AND ? ORDER BY salary";
 
-      // When
       List<Employee> midRangeSalaries =
-          library.queryForList(
-              getDatabaseName(),
-              jdbcUrl,
-              username,
-              sql,
-              List.of(80000, 100000),
-              Employee.class,
-              null);
+          library
+              .typed()
+              .runSqlTypedApi(
+                  getDatabaseName(),
+                  jdbcUrl,
+                  username,
+                  sql,
+                  List.of(80000, 100000),
+                  Employee.class,
+                  null);
 
-      // Then
       assertThat(midRangeSalaries)
-          .hasSize(2) // Alice (95k), Diana (82k)
+          .hasSize(2)
           .extracting(Employee::getFirstName)
-          .containsExactly("Diana", "Alice"); // Ordered by salary
+          .containsExactly("Diana", "Alice");
     }
 
     @Test
     @DisplayName("should return empty list for no matches")
     void shouldReturnEmptyForNoMatches() {
-      // Given
       String sql = "SELECT * FROM employees WHERE email = ?";
 
-      // When
       List<Employee> result =
-          library.queryForList(
-              getDatabaseName(),
-              jdbcUrl,
-              username,
-              sql,
-              List.of("nonexistent@example.com"),
-              Employee.class,
-              null);
+          library
+              .typed()
+              .runSqlTypedApi(
+                  getDatabaseName(),
+                  jdbcUrl,
+                  username,
+                  sql,
+                  List.of("nonexistent@example.com"),
+                  Employee.class,
+                  null);
 
-      // Then
       assertThat(result).isEmpty();
     }
 
     @Test
-    @DisplayName("should map column names correctly (underscore to camelCase)")
+    @DisplayName("should map underscore column names to camelCase setters")
     void shouldMapColumnNames() {
-      // Given - first_name → firstName, last_name → lastName, hire_date → hireDate
       String sql = "SELECT first_name, last_name, hire_date FROM employees WHERE id = 1";
 
-      // When
       List<Employee> result =
-          library.queryForList(
-              getDatabaseName(), jdbcUrl, username, sql, List.of(), Employee.class, null);
+          library
+              .typed()
+              .runSqlTypedApi(
+                  getDatabaseName(), jdbcUrl, username, sql, List.of(), Employee.class, null);
 
-      // Then
-      Employee alice = result.get(0);
+      Employee alice = result.getFirst();
       assertThat(alice.getFirstName()).isEqualTo("Alice");
       assertThat(alice.getLastName()).isEqualTo("Smith");
       assertThat(alice.getHireDate()).isEqualTo(Date.valueOf("2020-01-15"));
@@ -360,33 +322,31 @@ class JdbcCliLibraryIntegrationTest {
     @Test
     @DisplayName("should handle complex types (BigDecimal, Date, Boolean)")
     void shouldHandleComplexTypes() {
-      // Given
       String sql = "SELECT salary, hire_date, is_active FROM employees WHERE id = 3";
 
-      // When
       List<Employee> result =
-          library.queryForList(
-              getDatabaseName(), jdbcUrl, username, sql, List.of(), Employee.class, null);
+          library
+              .typed()
+              .runSqlTypedApi(
+                  getDatabaseName(), jdbcUrl, username, sql, List.of(), Employee.class, null);
 
-      // Then
-      Employee charlie = result.get(0);
+      Employee charlie = result.getFirst();
       assertThat(charlie.getSalary()).isEqualByComparingTo("110000.00");
       assertThat(charlie.getHireDate()).isEqualTo(Date.valueOf("2019-11-10"));
       assertThat(charlie.getIsActive()).isTrue();
     }
 
     @Test
-    @DisplayName("should work with different table (departments)")
+    @DisplayName("should work with departments table")
     void shouldWorkWithDifferentTable() {
-      // Given
       String sql = "SELECT * FROM departments ORDER BY dept_id";
 
-      // When
       List<Department> departments =
-          library.queryForList(
-              getDatabaseName(), jdbcUrl, username, sql, List.of(), Department.class, null);
+          library
+              .typed()
+              .runSqlTypedApi(
+                  getDatabaseName(), jdbcUrl, username, sql, List.of(), Department.class, null);
 
-      // Then
       assertThat(departments)
           .hasSize(3)
           .extracting(Department::getDeptName)
@@ -394,9 +354,8 @@ class JdbcCliLibraryIntegrationTest {
     }
 
     @Test
-    @DisplayName("should handle JOIN queries")
-    void shouldHandleJoinQueries() {
-      // Given
+    @DisplayName("should handle database-specific LIMIT/FETCH FIRST syntax")
+    void shouldHandleTopNQueries() {
       String sql =
           switch (DATABASE_TYPE) {
             case ORACLE ->
@@ -424,31 +383,29 @@ class JdbcCliLibraryIntegrationTest {
                 """;
           };
 
-      // When
       List<Employee> topEarners =
-          library.queryForList(
-              getDatabaseName(),
-              jdbcUrl,
-              username,
-              sql,
-              List.of(convertBoolean(true)),
-              Employee.class,
-              null);
+          library
+              .typed()
+              .runSqlTypedApi(
+                  getDatabaseName(),
+                  jdbcUrl,
+                  username,
+                  sql,
+                  List.of(convertBoolean(true)),
+                  Employee.class,
+                  null);
 
-      // Then
       assertThat(topEarners)
           .hasSize(2)
           .extracting(Employee::getFirstName)
-          .containsExactly("Charlie", "Eve"); // Highest paid active employees
+          .containsExactly("Charlie", "Eve");
     }
 
     @Test
-    @DisplayName("should handle aggregate queries (though result type might be different)")
-    void shouldHandleAggregateQueries() throws SQLException {
-      // Given - Using a simple Map for aggregate results
+    @DisplayName("should handle aggregate COUNT via direct JDBC (typed API requires JavaBean)")
+    void shouldHandleAggregateQueriesViaDirectJdbc() throws SQLException {
       String sql = "SELECT department, COUNT(*) as count FROM employees GROUP BY department";
 
-      // When - Query as generic Map results
       try (var stmt = directConnection.prepareStatement(sql);
           var rs = stmt.executeQuery()) {
 
@@ -459,34 +416,36 @@ class JdbcCliLibraryIntegrationTest {
           }
         }
 
-        // Then
-        assertThat(engineeringCount).isEqualTo(3); // Alice, Charlie, Eve
+        assertThat(engineeringCount).isEqualTo(3);
       }
     }
   }
 
+  // =========================================================================
+  // runSqlTypedApi() — single-result overload
+  // =========================================================================
+
   @Nested
-  @DisplayName("queryForObject()")
-  class QueryForObjectTests {
+  @DisplayName("runSqlTypedApi() — single result")
+  class RunSqlTypedApiSingleResultTests {
 
     @Test
     @DisplayName("should return single object for unique query")
     void shouldReturnSingleObject() {
-      // Given
       String sql = "SELECT * FROM employees WHERE email = ?";
 
-      // When
       Employee alice =
-          library.queryForObject(
-              getDatabaseName(),
-              jdbcUrl,
-              username,
-              sql,
-              List.of("alice@example.com"),
-              Employee.class,
-              null);
+          library
+              .typed()
+              .runSqlSingleTypedApi(
+                  getDatabaseName(),
+                  jdbcUrl,
+                  username,
+                  sql,
+                  List.of("alice@example.com"),
+                  Employee.class,
+                  null);
 
-      // Then
       assertThat(alice).isNotNull();
       assertThat(alice.getFirstName()).isEqualTo("Alice");
       assertThat(alice.getLastName()).isEqualTo("Smith");
@@ -496,33 +455,32 @@ class JdbcCliLibraryIntegrationTest {
     @Test
     @DisplayName("should return null when no rows found")
     void shouldReturnNullForNoRows() {
-      // Given
       String sql = "SELECT * FROM employees WHERE id = ?";
 
-      // When
       Employee result =
-          library.queryForObject(
-              getDatabaseName(), jdbcUrl, username, sql, List.of(999), Employee.class, null);
+          library
+              .typed()
+              .runSqlSingleTypedApi(
+                  getDatabaseName(), jdbcUrl, username, sql, List.of(999), Employee.class, null);
 
-      // Then
       assertThat(result).isNull();
     }
 
     @Test
-    @DisplayName("should throw exception when multiple rows found")
+    @DisplayName("should throw IllegalStateException when multiple rows found")
     @SuppressWarnings("java:S5778")
     void shouldThrowForMultipleRows() {
-      // Given - query that returns multiple rows
       String sql = "SELECT * FROM employees WHERE department = ?";
       String dbName = getDatabaseName();
       String dbUrl = jdbcUrl;
       String dbUser = username;
 
-      // When/Then
       assertThatThrownBy(
               () ->
-                  library.queryForObject(
-                      dbName, dbUrl, dbUser, sql, List.of("Engineering"), Employee.class, null))
+                  library
+                      .typed()
+                      .runSqlSingleTypedApi(
+                          dbName, dbUrl, dbUser, sql, List.of("Engineering"), Employee.class, null))
           .isInstanceOf(IllegalStateException.class)
           .hasMessageContaining("Query returned 3 rows");
     }
@@ -530,38 +488,40 @@ class JdbcCliLibraryIntegrationTest {
     @Test
     @DisplayName("should work with primary key lookup")
     void shouldWorkWithPrimaryKey() {
-      // Given
       String sql = "SELECT * FROM departments WHERE dept_id = ?";
 
-      // When
       Department engineering =
-          library.queryForObject(
-              getDatabaseName(), jdbcUrl, username, sql, List.of(1), Department.class, null);
+          library
+              .typed()
+              .runSqlSingleTypedApi(
+                  getDatabaseName(), jdbcUrl, username, sql, List.of(1), Department.class, null);
 
-      // Then
       assertThat(engineering).isNotNull();
       assertThat(engineering.getDeptName()).isEqualTo("Engineering");
       assertThat(engineering.getLocation()).isEqualTo("Building A");
     }
   }
 
+  // =========================================================================
+  // Connection management
+  // =========================================================================
+
   @Nested
   @DisplayName("Connection Management")
   class ConnectionManagementTests {
 
     @Test
-    @DisplayName("should handle connection pooling (multiple queries)")
+    @DisplayName("should handle multiple sequential queries")
     void shouldHandleMultipleQueries() {
-      // Given
       String sql = "SELECT * FROM employees WHERE id = ?";
 
-      // When - execute multiple queries sequentially
       for (int i = 1; i <= 5; i++) {
         List<Employee> result =
-            library.queryForList(
-                getDatabaseName(), jdbcUrl, username, sql, List.of(i), Employee.class, null);
+            library
+                .typed()
+                .runSqlTypedApi(
+                    getDatabaseName(), jdbcUrl, username, sql, List.of(i), Employee.class, null);
 
-        // Then
         assertThat(result).hasSize(1);
       }
     }
@@ -569,13 +529,11 @@ class JdbcCliLibraryIntegrationTest {
     @Test
     @DisplayName("should handle concurrent queries safely")
     void shouldHandleConcurrentQueries() throws InterruptedException {
-      // Given
       String sql = "SELECT COUNT(*) FROM employees";
       final String connectionUrl = jdbcUrl;
       final String connectionUser = username;
       final String connectionPassword = password;
 
-      // When - simulate concurrent access
       var threads = new Thread[10];
       var exceptions = new java.util.concurrent.ConcurrentLinkedQueue<Exception>();
 
@@ -583,17 +541,14 @@ class JdbcCliLibraryIntegrationTest {
         threads[i] =
             new Thread(
                 () -> {
-                  try {
-                    // Use direct SQL for count query
-                    try (var conn =
-                            DriverManager.getConnection(
-                                connectionUrl, connectionUser, connectionPassword);
-                        var stmt = conn.prepareStatement(sql);
-                        var rs = stmt.executeQuery()) {
-                      if (rs.next()) {
-                        int count = rs.getInt(1);
-                        assertThat(count).isEqualTo(5);
-                      }
+                  try (var conn =
+                          DriverManager.getConnection(
+                              connectionUrl, connectionUser, connectionPassword);
+                      var stmt = conn.prepareStatement(sql);
+                      var rs = stmt.executeQuery()) {
+                    if (rs.next()) {
+                      int count = rs.getInt(1);
+                      assertThat(count).isEqualTo(5);
                     }
                   } catch (Exception e) {
                     exceptions.add(e);
@@ -602,15 +557,17 @@ class JdbcCliLibraryIntegrationTest {
         threads[i].start();
       }
 
-      // Wait for all threads
       for (Thread thread : threads) {
         thread.join();
       }
 
-      // Then
       assertThat(exceptions).isEmpty();
     }
   }
+
+  // =========================================================================
+  // Error handling
+  // =========================================================================
 
   @Nested
   @DisplayName("Error Handling")
@@ -620,18 +577,18 @@ class JdbcCliLibraryIntegrationTest {
     @DisplayName("should throw RuntimeException for invalid SQL")
     @SuppressWarnings("java:S5778")
     void shouldThrowForInvalidSql() {
-      // Given
       String invalidSql = "SELECT * FROM nonexistent_table";
       String dbName = getDatabaseName();
       String dbUrl = jdbcUrl;
       String dbUser = username;
 
-      // When/Then
       var assertion =
           assertThatThrownBy(
                   () ->
-                      library.queryForList(
-                          dbName, dbUrl, dbUser, invalidSql, List.of(), Employee.class, null))
+                      library
+                          .typed()
+                          .runSqlTypedApi(
+                              dbName, dbUrl, dbUser, invalidSql, List.of(), Employee.class, null))
               .isInstanceOf(RuntimeException.class)
               .hasMessageContaining("Query execution failed");
       if (DATABASE_TYPE == DatabaseType.ORACLE) {
@@ -645,18 +602,18 @@ class JdbcCliLibraryIntegrationTest {
     @DisplayName("should throw RuntimeException for parameter count mismatch")
     @SuppressWarnings("java:S5778")
     void shouldThrowForParameterMismatch() {
-      // Given
       String sql = "SELECT * FROM employees WHERE id = ? AND email = ?";
       String dbName = getDatabaseName();
       String dbUrl = jdbcUrl;
       String dbUser = username;
 
-      // When/Then - providing only 1 parameter when 2 needed
       var assertion =
           assertThatThrownBy(
                   () ->
-                      library.queryForList(
-                          dbName, dbUrl, dbUser, sql, List.of(1), Employee.class, null))
+                      library
+                          .typed()
+                          .runSqlTypedApi(
+                              dbName, dbUrl, dbUser, sql, List.of(1), Employee.class, null))
               .isInstanceOf(RuntimeException.class)
               .hasMessageContaining("Query execution failed");
       if (DATABASE_TYPE == DatabaseType.ORACLE) {
@@ -669,64 +626,66 @@ class JdbcCliLibraryIntegrationTest {
     }
 
     @Test
-    @DisplayName("should handle connection failure (wrong credentials)")
+    @DisplayName("should handle connection failure on wrong credentials")
     void shouldHandleConnectionFailure() {
-      // Given
       String sql = "SELECT * FROM employees";
       String dbName = getDatabaseName();
       String dbUrl = jdbcUrl;
 
-      // When/Then - wrong username
       assertThatThrownBy(
               () ->
-                  library.queryForList(
-                      dbName, dbUrl, "wronguser", sql, List.of(), Employee.class, null))
-          .isInstanceOf(Exception.class); // Will fail during connection
+                  library
+                      .typed()
+                      .runSqlTypedApi(
+                          dbName, dbUrl, "wronguser", sql, List.of(), Employee.class, null))
+          .isInstanceOf(Exception.class);
     }
   }
+
+  // =========================================================================
+  // Performance
+  // =========================================================================
 
   @Nested
   @DisplayName("Performance")
   class PerformanceTests {
 
     @Test
-    @DisplayName("should execute 100 queries in reasonable time")
+    @DisplayName("should execute 30 queries in under 5 seconds")
     void shouldExecuteMultipleQueriesQuickly() {
-      // Given
       String sql = "SELECT * FROM employees WHERE id = ?";
       int iterations = 30;
 
-      // When
       long start = System.nanoTime();
       for (int i = 0; i < iterations; i++) {
-        library.queryForList(
-            getDatabaseName(),
-            jdbcUrl,
-            username,
-            sql,
-            List.of((i % 5) + 1), // Cycle through IDs 1-5
-            Employee.class,
-            null);
+        library
+            .typed()
+            .runSqlTypedApi(
+                getDatabaseName(),
+                jdbcUrl,
+                username,
+                sql,
+                List.of((i % 5) + 1),
+                Employee.class,
+                null);
       }
       long elapsed = System.nanoTime() - start;
 
-      // Then
-      System.out.println("30 PostgreSQL queries: " + elapsed / 1_000_000 + "ms");
-      assertThat(elapsed).isLessThan(5_000_000_000L); // < 5 seconds
+      System.out.println("30 queries via typed API: " + elapsed / 1_000_000 + "ms"); // NOSONAR
+      assertThat(elapsed).isLessThan(5_000_000_000L);
     }
 
     @Test
     @DisplayName("should handle large result sets efficiently")
     void shouldHandleLargeResultSet() throws SQLException {
-      // Given - insert more test data using batching to reduce per-row overhead
       boolean originalAutoCommit = directConnection.getAutoCommit();
       directConnection.setAutoCommit(false);
       boolean cleanupRequired = false;
       int targetRows = 200;
       try (var stmt =
           directConnection.prepareStatement(
-              "INSERT INTO employees (first_name, last_name, email, department, salary, hire_date,"
-                  + " is_active) VALUES (?, ?, ?, ?, ?, ?, ?)")) {
+              "INSERT INTO employees (first_name, last_name, email, department, salary,"
+                  + " hire_date, is_active) VALUES (?, ?, ?, ?, ?, ?, ?)")) {
         for (int i = 6; i <= targetRows; i++) {
           stmt.setString(1, "User" + i);
           stmt.setString(2, "Test");
@@ -736,7 +695,6 @@ class JdbcCliLibraryIntegrationTest {
           stmt.setDate(6, Date.valueOf("2023-01-01"));
           stmt.setBoolean(7, true);
           stmt.addBatch();
-
           if (i % 100 == 0) {
             stmt.executeBatch();
           }
@@ -751,17 +709,18 @@ class JdbcCliLibraryIntegrationTest {
       String sql = "SELECT * FROM employees";
 
       try {
-        // When
         long start = System.nanoTime();
         List<Employee> allEmployees =
-            library.queryForList(
-                getDatabaseName(), jdbcUrl, username, sql, List.of(), Employee.class, null);
+            library
+                .typed()
+                .runSqlTypedApi(
+                    getDatabaseName(), jdbcUrl, username, sql, List.of(), Employee.class, null);
         long elapsed = System.nanoTime() - start;
 
-        // Then
-        System.out.println("Query ~" + targetRows + " rows: " + elapsed / 1_000_000 + "ms");
+        System.out.println( // NOSONAR
+            "Query ~" + targetRows + " rows via typed API: " + elapsed / 1_000_000 + "ms");
         assertThat(allEmployees).hasSizeGreaterThanOrEqualTo(targetRows);
-        assertThat(elapsed).isLessThan(3_000_000_000L); // < 3 seconds
+        assertThat(elapsed).isLessThan(3_000_000_000L);
       } finally {
         if (cleanupRequired) {
           try (var cleanup =
